[ci skip] 43082102844 https://github.com/tkoyama010/scientific-python-lectures-translations/actions/runs/15313224134/job/43082102844

--- a/locales/ja/LC_MESSAGES/packages.po
+++ b/locales/ja/LC_MESSAGES/packages.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2025.1rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-05-20 00:14+0000\n"
+"POT-Creation-Date: 2025-05-29 00:14+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
 "Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
@@ -4159,6 +4159,8 @@ msgid ""
 " weight, blood pressure) measure on 442 patients, and an indication of "
 "disease progression after one year::"
 msgstr ""
+"単純な回帰問題である糖尿病データセットにこれらのパラメータを設定してみましょう。 "
+"糖尿病データは、442人の患者を対象に測定された10の生理学的変数（年齢、性別、体重、血圧）と、1年後の疾患進行の指標から構成されます::"
 
 #: ../../scientific-python-lectures/packages/scikit-learn/index.rst:1119
 msgid ""
