[ci skip] 43506475550 https://github.com/tkoyama010/scientific-python-lectures-translations/actions/runs/15455360144/job/43506475550

--- a/locales/ja/LC_MESSAGES/packages.po
+++ b/locales/ja/LC_MESSAGES/packages.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2025.1rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-02 00:15+0000\n"
+"POT-Creation-Date: 2025-06-05 00:14+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
 "Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
@@ -2794,6 +2794,8 @@ msgid ""
 "high correlations are often spurious. The alpha parameter controls the "
 "amount of shrinkage used."
 msgstr ""
+"正則化を用いる別の線形推定器、 :class:`~sklearn.linear_model.Ridge` 推定器を用いることができます。 "
+"この推定量は、非常に高い相関は多くの場合あやしいという仮定の下で、係数をゼロに縮小することによって正則化します。alphaパラメータは、使用する収縮量を制御します。"
 
 #: ../../scientific-python-lectures/packages/scikit-learn/auto_examples/plot_variance_linear_regr.rst:118
 msgid ""
@@ -4476,7 +4478,7 @@ msgid ""
 "As we can see, the estimator displays much less variance. However it "
 "systematically under-estimates the coefficient. It displays a biased "
 "behavior."
-msgstr ""
+msgstr "見てわかるように、この推定量では分散がかなり小さくなっています。 しかし、系統的に係数を過小評価します。 これは偏った振る舞いを示します。"
 
 #: ../../scientific-python-lectures/packages/scikit-learn/index.rst:1414
 msgid ""
